--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 
 h1 {
 	color: rgb(245, 245, 245);
-  font-size: 102px;
+  font-size: 80px;
   font-weight: 900;
   margin: 30px 0px;
   text-shadow: 2px 10px rgba(0, 0, 0, 0.7);
@@ -20,6 +20,12 @@ h1 {
   border-style: solid;
   border-width: 15px;
   border-color: rgba(253, 253, 253, 0.7);
+  transition: transform .4s;
+}
+
+h1:hover {
+	color: rgb(46, 46, 46);
+    transform: scale(0.8);
 }
 
 #calculator{
@@ -27,7 +33,7 @@ h1 {
 	height: 520px;
 	background-color: #ccccccf5;
 	margin: 0 auto;
-	top: 90px;
+	top: 60px;
 	position: relative;
 	border-radius: 5px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
